update metadata Generated cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Lord-Lister-No-0390-Eleonore-Manoury_67868
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   authors:
   - agent_name: Hageman, Felix (Leonard Felix)
@@ -23,6 +26,8 @@ creator:
     gutenberg_agent_id: '53456'
     url: http://www.gutenberg.org/2009/agents/53456
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67868#Lord-Lister-No-0390-Eleonore-Manoury
 gutenberg_issued: '2022-04-18'
 identifiers:
   gutenberg: '67868'
